# fscache

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  config.toml  f-cache.service  fscache.service  plex-hot-cache.service
.github/workflows/: ci.yml  pages.yml
docker/: Dockerfile  README.md  build.sh  config.template.toml  default-config.toml  entrypoint.sh
docs/pages/: index.html
src/: action_engine.rs  backing_store.rs  cache.rs  cache_manager.rs  cacher.rs  config.rs  copier.rs  discovery.rs  fuse_fs.rs  inode.rs  lib.rs  main.rs  plex_api.rs  plex_db.rs  prediction_utils.rs  predictor.rs  preset.rs  scheduler.rs  telemetry.rs  utils.rs
src/cache/: db.rs  io.rs  manager.rs
src/engine/: action.rs
src/fuse/: fusefs.rs
src/ipc/: broadcast_layer.rs  client.rs  mod.rs  protocol.rs  recent_logs.rs  server.rs
src/presets/: cache_on_miss.rs  mod.rs  plex_episode_prediction.rs  prefetch.rs
src/tui/: app.rs  logging.rs  metrics_layer.rs  state.rs  ui.rs
tests/: cache_overlay.rs  discovery_e2e.rs  e2e.rs  integrity.rs  ipc_e2e.rs  metadata.rs  multi_mount.rs  passthrough.rs  playback_detection.rs  prediction.rs  prefetch_e2e.rs  presets.rs  resilience.rs  system.rs
tests/common/: mod.rs
tests/docker/: docker-compose.test.yml  run.sh  test-config.toml
tests/presets/: cache_on_miss.rs  plex_episode_prediction.rs  prefetch.rs
