[package]
name = "plex_hot_cache"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "plex-hot-cache"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
